Add links to BestPracticeHandbook in wiki.

--- a/development/requirements.html
+++ b/development/requirements.html
@@ -267,6 +267,11 @@ http://www.boost.org/development/website_updating.html
               Variation</a> to see how to supply performance, platform, or
               other implementation variations.</p>
 
+              <p>Browse through <a href=
+              "https://svn.boost.org/trac/boost/wiki/BestPracticeHandbook">
+              the Best Practices Handbook</a> for ideas and links to source
+              code in existing Boost libraries.</p>
+
               <p>Read the <a href=
               "/development/separate_compilation.html">guidelines for
               libraries with separate source</a> to see how to ensure that
