--- a/development/submissions.html
+++ b/development/submissions.html
@@ -166,6 +166,11 @@ http://www.boost.org/development/website_updating.html
               past messages is one way to see how this process worked for
               other Boost libraries.</p>
 
+              <p>Some best practices ideas with samples of script and code
+              and links into source code in existing Boost libraries can be
+              <a href="https://svn.boost.org/trac/boost/wiki/BestPracticeHandbook">
+              found on the Boost wiki</a>.</p>
+
               <h2><a name="Seeking" id="Seeking"></a>Seek a Review
               Manager</h2>
 
