Link to beta documentation.

--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -45,7 +45,7 @@
               "news-title">Version 1.59.0 - work in progress</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/master/">Documentation</a>
+              <p><a href="/doc/libs/1_59_0_b1/">Documentation</a>
 
               <div class="news-description">
                 <div class="description">
@@ -67,7 +67,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -79,7 +79,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -106,11 +106,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
-                Added <a href="/doc/libs/master/libs/multi_index/doc/tutorial/indices.html#rnk_indices">ranked
+                Added <a href="/doc/libs/1_59_0_b1/libs/multi_index/doc/tutorial/indices.html#rnk_indices">ranked
                 indices</a>.
               </div>
             </li>
@@ -124,7 +124,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
