--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -354,7 +354,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Ahmed Charles</td>
 
-                    <td>-</td>
+                    <td>August 21, 2015 - August 31, 2015</td>
                   </tr>
 
                   <tr>
