Remove 'index.html' from link.

--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -438,7 +438,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/program_options/index.html">Program Options</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
