Add coroutine2 to new libraries.

--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -54,7 +54,9 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/coroutine2/">Coroutine2</a>:</span>
+  An extendible
+          and configurable type-conversion framework, from Vladimir Batov.
         </div>
       </li>
     </ul>
