Http has been scheduled.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -489,7 +489,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Bjorn Reese</td>
 
-                    <td>-</td>
+                    <td>August 7, 2015 - August 16, 2015</td>
                   </tr>
 
 
