Fiber mini-review scheduled.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -492,6 +492,25 @@ http://www.boost.org/development/website_updating.html
                     <td>August 7, 2015 - August 16, 2015</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added August 2015 -->
+                    <td>Fiber (mini-review)</td>
+
+                    <td>Oliver Kowalke</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/olk/boost-fiber">
+                            Source</a>
+                        <li><a href="http://ok73.funpic.de/boost/libs/fiber/doc/html/index.html">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Nat Goodspeed</td>
+
+                    <td>September 4, 2015 - September 13, 2015</td>
+                  </tr>
 
 		  <!--
                   <tr>
