new doc link for fiber.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -502,7 +502,7 @@ http://www.boost.org/development/website_updating.html
                       <ul>
                         <li><a href="https://github.com/olk/boost-fiber">
                             Source</a>
-                        <li><a href="http://ok73.funpic.de/boost/libs/fiber/doc/html/index.html">
+                        <li><a href="http://olk.github.io/libs/fiber/doc/html/">
                         Documentation</a>
                       </ul>
                     </td>                     
