--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -40,7 +40,7 @@
               "news-title">Version 1.59.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/1_59_0_b1/">Documentation</a>
+              <p><a href="/doc/libs/1_59_0/">Documentation</a>
               <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.tar.bz2/download">boost_1_59_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.tar.gz/download">boost_1_59_0_b1.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.7z/download">boost_1_59_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.zip/download">boost_1_59_0_b1.zip</a></td></tr></table>
@@ -49,12 +49,24 @@
 
 
 
+  <div id="version_1_59_0.new_libraries">
+    <h3><span class="link">New Libraries</span></h3>
+    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/coroutine2/">Coroutine2</a>:</span>
+  An extendible
+          and configurable type-conversion framework, from Vladimir Batov.
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_59_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -95,7 +107,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -117,7 +129,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -144,7 +156,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -157,7 +169,7 @@
                 and <code><span class="identifier">fusion</span><span class="special">::(</span><span class="identifier">value_</span><span class="special">)</span><span class="identifier">at_key</span></code>. <code><span class="identifier">Unbounded</span>
                 <span class="identifier">Iterator</span></code> has no effect
                 (reserved for future release). For more details, see <a href="libs/fusion/doc/html/fusion/sequence/concepts/unbounded_sequence.html">Unbounded
-                Sequence</a> and <a href="/doc/libs/1_59_0_b1/libs/fusion/doc/html/fusion/iterator/concepts/unbounded_iterator.html">Unbounded
+                Sequence</a> and <a href="/doc/libs/1_59_0/libs/fusion/doc/html/fusion/iterator/concepts/unbounded_iterator.html">Unbounded
                 Iterator</a>. (<a href="https://github.com/boostorg/fusion/pull/85">pull-request
                 85</a>)
               </div>
@@ -165,7 +177,8 @@
             <li>
               <div>
                 Support C++11 variadic templates for <code><span class="identifier">fusion</span><span class="special">::</span><span class="identifier">list</span></code>.
-                (<a href="https://github.com/boostorg/fusion/pull/84">https://github.com/boostorg/fusion/pull/84</a>)
+                (<a href="https://github.com/boostorg/fusion/pull/84">pull-request
+                84</a>)
               </div>
             </li>
             <li>
@@ -209,6 +222,16 @@
                       87</a>)
                     </div>
                   </li>
+                  <li>
+                    <div>
+                      Fix compile error on copying a fusion::tuple. (<a href="https://svn.boost.org/trac/boost/ticket/11140">#11140</a>)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Add workarounds for GCC 4.6 with constexpr. (<a href="https://svn.boost.org/trac/boost/ticket/11517">#11517</a>)
+                    </div>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -217,7 +240,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -237,7 +260,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -255,7 +278,24 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed warnings
+              </div>
+            </li>
+            <li>
+              <div>
+                Simplified metaprogramming (thanks to Edward Diener)
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -343,7 +383,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_59_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_59_0/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -352,7 +392,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -373,11 +413,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
-                Added <a href="/doc/libs/1_59_0_b1/libs/multi_index/doc/tutorial/indices.html#rnk_indices">ranked
+                Added <a href="/doc/libs/1_59_0/libs/multi_index/doc/tutorial/indices.html#rnk_indices">ranked
                 indices</a>.
               </div>
             </li>
@@ -391,7 +431,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -428,7 +468,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
@@ -473,7 +513,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0_b1/libs/test/">Boost.Test v3</a>:</span>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/test/">Boost.Test v3</a>:</span>
           <ul>
             <li>
               <div>
@@ -557,6 +597,48 @@
                     </div>
                   </li>
                 </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/type_index/">TypeIndex</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Removed dependencies on some of the Boost libraries to improve compilation
+                times and modularity
+              </div>
+            </li>
+            <li>
+              <div>
+                Warnings fixed in tests and other maintainance improvements were
+                done.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_59_0/libs/variant/">Variant</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed missing include in element_index.hpp <a href="https://svn.boost.org/trac/boost/ticket/11196">#11196</a>, <a href="https://svn.boost.org/trac/boost/ticket/11283">#11283</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">apply_visitor</span></code> usage with C++14
+                and const references <a href="https://svn.boost.org/trac/boost/ticket/11251">#11251</a>, <a href="https://svn.boost.org/trac/boost/ticket/11285">#11285</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Relaxed compile time checks for all the <code><span class="identifier">get</span><span class="special">&lt;</span><span class="identifier">reference</span><span class="special">&gt;(</span><span class="identifier">variant_variable</span><span class="special">)</span></code> functions (thanks to Nicolas Cornu)
               </div>
             </li>
           </ul>
