--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.59.0 beta</title>
+  <title>Version 1.59.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,13 +37,13 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.59.0 beta</span></h2>
+              "news-title">Version 1.59.0</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
+              <p><span class=news-date">August 13th, 2015 15:23 GMT</span></p>
               <p><a href="/doc/libs/1_59_0/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.tar.bz2/download">boost_1_59_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.tar.gz/download">boost_1_59_0_b1.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.7z/download">boost_1_59_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0.beta.1/boost_1_59_0_b1.zip/download">boost_1_59_0_b1.zip</a></td></tr></table>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0/boost_1_59_0.tar.bz2/download">boost_1_59_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0/boost_1_59_0.tar.gz/download">boost_1_59_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0/boost_1_59_0.7z/download">boost_1_59_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.59.0/boost_1_59_0.zip/download">boost_1_59_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -54,7 +54,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/libs/coroutine2/">Coroutine2</a>:</span>
   An extendible
           and configurable type-conversion framework, from Vladimir Batov.
         </div>
@@ -66,7 +66,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -107,7 +107,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -129,7 +129,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -156,7 +156,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -169,7 +169,7 @@
                 and <code><span class="identifier">fusion</span><span class="special">::(</span><span class="identifier">value_</span><span class="special">)</span><span class="identifier">at_key</span></code>. <code><span class="identifier">Unbounded</span>
                 <span class="identifier">Iterator</span></code> has no effect
                 (reserved for future release). For more details, see <a href="libs/fusion/doc/html/fusion/sequence/concepts/unbounded_sequence.html">Unbounded
-                Sequence</a> and <a href="/doc/libs/1_59_0/libs/fusion/doc/html/fusion/iterator/concepts/unbounded_iterator.html">Unbounded
+                Sequence</a> and <a href="/libs/fusion/doc/html/fusion/iterator/concepts/unbounded_iterator.html">Unbounded
                 Iterator</a>. (<a href="https://github.com/boostorg/fusion/pull/85">pull-request
                 85</a>)
               </div>
@@ -240,7 +240,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -260,7 +260,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -278,7 +278,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -295,7 +295,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -383,7 +383,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_59_0/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -392,7 +392,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -413,11 +413,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
-                Added <a href="/doc/libs/1_59_0/libs/multi_index/doc/tutorial/indices.html#rnk_indices">ranked
+                Added <a href="/libs/multi_index/doc/tutorial/indices.html#rnk_indices">ranked
                 indices</a>.
               </div>
             </li>
@@ -431,7 +431,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -468,7 +468,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
@@ -513,7 +513,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/test/">Boost.Test v3</a>:</span>
+          <span class="library"><a href="/libs/test/">Boost.Test v3</a>:</span>
           <ul>
             <li>
               <div>
@@ -604,7 +604,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -623,7 +623,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_59_0/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
