Fix new library list.

--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -54,9 +54,16 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/libs/convert/">Convert</a>:</span>
+  An extendible and configurable
+          type-conversion framework, from Vladimir Batov.
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/coroutine2/">Coroutine2</a>:</span>
-  An extendible
-          and configurable type-conversion framework, from Vladimir Batov.
+  (C++14) Coroutine
+          library, from Oliver Kowalke.
         </div>
       </li>
     </ul>
