--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -247,6 +247,189 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Additional functionality:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Added rtree const_iterator, begin(), end() and the support
+                      for Boost.Range.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      The support for C++11 <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">initializer_list</span></code>
+                      in geometries models.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Disjoint and intersects support the following geometry combinations:
+                      multipoint/linestring, multipoint/multilinestring.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added relate() and relation() algorithms.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Intersection has been implemented for combinations of pointlike
+                      and linear geometries
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added implementation for difference(pointlike, linear)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      New algorithm is_empty, returning true if the geometry represents
+                      the empty set
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      The envelope algorithm supports pointlike and linear geometries
+                      in the spherical equatorial coordinate system
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      The envelope algorithm supports pointlike geometries in the
+                      geographic coordinate system
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Improvements:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Upgraded rtree const_query_iterator category to ForwardIterator.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Buffer performance of buffers around multi-points is improved
+                      significantly
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Breaking changes:</em>
+                <ul>
+                  <li>
+                    <div>
+                      buffer side strategy now returns error_code instead of bool.
+                      If you have your own custom side strategy, it should be adapted
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Solved tickets:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11113">#11113</a>
+                      Support easy enumeration of all elements with BOOST_FOREACH
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11232">#11232</a>
+                      Feature request - relate()
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11236">#11236</a>
+                      Invalid result of centroid() for integer coordinate type
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11268">#11268</a>
+                      Regression in boost::geometry::intersection interface with
+                      multi_linestring and box -- does not compile on 1.57 VS 1.55
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11332">#11332</a>
+                      Assertion failure in buffer for extreme coordinate differences
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11346">#11346</a>
+                      Segment iterator does not work with ranges returning values
+                      instead of references
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/11436">#11436</a>
+                      sym_difference(py1, py2, mpy) returns invalid multipolygon
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Bugfixes:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Buffer: use a more robust way to calculate the side of an intersection,
+                      this fixes several errors in buffer generation
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix in selection of segment to which calculate from IP from,
+                      in intersection of two segments. Now is selected the one close
+                      to a segment-point point, or else the one on the shortest segment.
+                      This avoids (rarely occuring) generation of tiny triangles
+                      making output polygons invalid
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      In rescaling round instead of truncate to the integer grid
+                      (this fix and the previous mentioned can have some impact on
+                      output geometries)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fix potential infinite loop in detail::has_spikes (the loop
+                      can happen if the points passed have NaN coordinates)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
