--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -526,6 +526,21 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                 <tr>
+                  <td>Boost 1.59.0 Released</td>
+
+                  <td></td>
+
+                  <td>Marshall Clow</td>
+
+                  <td>August 13, 2015</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/news/version_1_59_0">Notes</a>
+                  </td>
+                </tr>
+
+                <tr>
                   <!-- Added February 2014 -->
 
                   <td>Http</td>
