--- a/development/reuse.html
+++ b/development/reuse.html
@@ -70,9 +70,9 @@ http://www.boost.org/development/website_updating.html
               <p><strong>Example where a standard library component might
               possibly be used:</strong> Providing diagnostic output as a
               debugging aid can be a nice feature for a library. Yet using
-              Standard Library &lt;iostream&gt; can involves a lot of
+              Standard Library &lt;iostream&gt; can involve a lot of
               additional cost, particularly if &lt;iostream&gt; is unlikely
-              to be use elsewhere in the application. In certain GUI or
+              to be used elsewhere in the application. In certain GUI or
               embedded applications, coupling to &lt;iostream&gt; would be a
               disqualification. Consider redesign of the boost library in
               question so that the user supplies the diagnostic output
