Fix dead link: Acknowledgements

--- a/development/testing.html
+++ b/development/testing.html
@@ -40,13 +40,13 @@ http://www.boost.org/development/website_updating.html
                 <li><a href="#RegressionTesting">Regression Tests</a></li>
 
                 <li><a href="#Inspection">Inspection Reports</a></li>
-
                 <!-- <li><a href="#Snapshots">Snapshots</a></li> -->
 
                 <li><a href="#Introduction">More about regression
                 tests</a></li>
 
-                <li><a href="#Acknowledgements">Acknowledgements</a></li>
+                <li><a href=
+                "/community/acknowledgements.html#testing">Acknowledgements</a></li>
               </ul>
 
               <h2><a name="RegressionTesting" id=
