Add property_tree release notes.

--- a/users/history/version_1_59_0.html
+++ b/users/history/version_1_59_0.html
@@ -669,6 +669,18 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/property_tree/">Property Tree</a>:</span>
+          <ul>
+            <li>A new JSON parser with full Unicode support.</li>
+            <li><strong>Breaking change:</strong> The new parser does not
+              support comments or string concatenation in JSON files.
+              These features were non-standard extensions of the old parser
+              but their removal could break code which was relying on them.
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
