--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -54,9 +54,9 @@
     <ul>
       <li>
         <div>
-          Boost.Python will fail to build if it is complied agains a version of python
-          that is one of: 3.0.X, 3.1.X, 3.2.X, 3.3.X. Versions 2.X and 3.4+ are not
-          affected. This is fixed in <a href="https://github.com/boostorg/python/commit/3e405b6fd5db5615bbef241763de070118222ca7">git</a>.
+          Boost.Python will fail to build if it is compiled against a version of
+          python that is one of: 3.0.X, 3.1.X, 3.2.X, 3.3.X. Versions 2.X and 3.4+
+          are not affected. This is fixed in <a href="https://github.com/boostorg/python/commit/3e405b6fd5db5615bbef241763de070118222ca7">git</a>.
         </div>
       </li>
       <li>
