Updated GSoC description page.

--- a/community/gsoc.html
+++ b/community/gsoc.html
@@ -34,12 +34,51 @@ http://www.boost.org/development/website_updating.html
               initiative, a program by which student developers are sponsored
               for their contributions within open source organizations
               willing to mentor the participants.</p>
+              
+              <p>Currently the application process begins around
+              December/January by the student <a
+              href="https://svn.boost.org/trac/boost/wiki/SoCPrevious">
+              reviewing past GSoC project ideas</a> and approaching the <a
+              href="http://www.boost.org/community/groups.html#main">Boost
+              developers mailing list</a> to find a mentor willing to mentor
+              them and codevelop a project proposal to be submitted to Google
+              for funding the coming summer. Students should expect to be
+              flexible with regard to what topics and proposals mentors are
+              willing to mentor.</p>
+              
+              <p>If you arrive to the process too late to prearrange a mentor,
+              some potential mentors supply prewritten project proposals with
+              C++ programming competency tests on <a
+              href="https://www.google.com/#safe=off&q=boost+gsoc+project+ideas">
+              this year's GSoC Project Ideas page</a>. If you have in the past
+              made a <b>substantial</b> contribution to a well known open source
+              project, it may be possible to skip the C++ programming competency
+              exam.</p>
 
-              <ul>
-                <li><a href="gsoc_2006_boost_overview.html">An overview of
-                Boost participation in Google Summer of Code&trade;
-                2006</a></li>
-              </ul>
+<h3 id="GithubsforstandaloneGSoCspastandpresent">Github's for standalone GSoCs past and present</h3>
+<p>
+Since 2013 with Boost's transition to git we have kept a single umbrella org on github for those GSoCs which are fairly self standing. Incremental extensions to existing libraries usually enter that library's main git repo as an experimental branch. Here are those orgs:
+</p>
+<ul><li>GSoC 2013: <a class="ext-link" href="https://github.com/BoostGSoC13"><span class="icon"> </span>https://github.com/BoostGSoC13</a>
+</li><li>GSoC 2014: <a class="ext-link" href="https://github.com/BoostGSoC14"><span class="icon"> </span>https://github.com/BoostGSoC14</a>
+</li><li>GSoC 2015: <a class="ext-link" href="https://github.com/BoostGSoC15"><span class="icon"> </span>https://github.com/BoostGSoC15</a>
+</li></ul><p>
+Students may find examining past GSoC source code and commit histories of use.
+</p>
+<h3 id="HistoricalGSoCIdeaspagesforyears2006tonow">Historical GSoC Ideas pages for years 2006 to now</h3>
+<ul><li>2015 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/SoC2015">Project Ideas</a>
+</li><li>2014 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/SoC2014">Project Ideas</a>
+</li><li>2013 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/SoC2013">Project Ideas</a>
+</li><li>2012 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/SoC2012">Project Ideas</a>
+</li><li>2011 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/SoC2011">Project Ideas</a>
+</li><li>2010 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/SoC2010">Project Ideas</a>
+</li><li>2009 <a class="wiki" href="https://svn.boost.org/trac/boost/wiki/soc2009">Project Ideas</a>
+</li><li>2008 <a class="ext-link" href="http://www.crystalclearsoftware.com/cgi-bin/boost_wiki/wiki.pl?Google_Summer_Of_Code_2008"><span class="icon"> </span>Project Ideas</a>
+</li><li>2007 <a class="ext-link" href="http://www.crystalclearsoftware.com/cgi-bin/boost_wiki/wiki.pl?Google_Summer_Of_Code_2007"><span class="icon"> </span>Project Ideas</a>
+</li><li>2006 <a class="ext-link" href="http://www.crystalclearsoftware.com/cgi-bin/boost_wiki/wiki.pl?Google_Summer_Of_Code_2006"><span class="icon"> </span>Project Ideas</a>.
+<a href="http://www.boost.org/community/gsoc_2006_boost_overview.html">An overview of Boost participation in Google Summer of Code™ 2006</a>.
+</li></ul>
+
             </div>
           </div>
         </div>
