--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -482,8 +482,10 @@ http://www.boost.org/development/website_updating.html
                     <td>September 4, 2015 - September 13, 2015</td>
 
                     <td>
-                      <a href=
-			 "http://lists.boost.org/boost-announce/2015/09/0453.php">Pending</a>
+                      <del><a href=
+			 "http://lists.boost.org/boost-announce/2015/09/0453.php">Pending</a></del><br/>
+<a href=
+			 "http://lists.boost.org/boost-announce/2015/10/0456.php">Continuing Conditional Accept</a>
                     </td>
                   </tr>
 
