--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -429,6 +429,26 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added October 2015 -->
+                    <td>Segmented Tree Seq</td>
+
+                    <td>Chris Clearwater</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="http://rrsd.com/blincubator.com/bi_library/segmentedtreeseq-2/?gform_post_id=1520">
+                            Incubator</a>
+                        <li><a href="https://det.github.io/segmented_tree_seq">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
