Glen Fernandes volunteered to manage SegmentedTreeSeq.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -444,7 +444,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 
-                    <td>Needed</td>
+                    <td>Glen Fernandes</td>
 
                     <td>-</td>
                   </tr>
