--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -52,6 +52,33 @@
 
 
 
+  <div id="version_1_60_0.notes_for_windows_users">
+    <h3><span class="link">Notes for Windows
+    users</span></h3>
+    <p>
+      This release of Boost will by default compile for Windows Vista/Windows Server
+      2008, if the compiler supports a recent enough Windows SDK, and for Windows
+      XP otherwise. Binaries compiled with default options may not run on the older
+      Windows versions.
+    </p>
+    <p>
+      It is still possible to explicitly specify target Windows version by defining
+      <code><span class="identifier">BOOST_USE_WINAPI_VERSION</span></code> to
+      a numeric version of Windows API. For example, building Boost for Windows XP
+      can be done with the following command:
+    </p>
+<pre>    b2 release define=BOOST_USE_WINAPI_VERSION=0x0501
+</pre>
+    <p>
+      The list of Windows API version numbers can be seen on <a href="https://msdn.microsoft.com/en-us/library/6sehtctf.aspx">this</a>
+      page.
+    </p>
+    <p>
+      This change only concerns libraries that use the common Windows API abstraction
+      layer. Currently, these libraries are: Boost.Chrono, Boost.Dll, Boost.Log,
+      Boost.UUID. This will also affect all dependent libraries.
+    </p>
+  </div>
   <div id="version_1_60_0.new_libraries">
     <h3><span class="link">New Libraries</span></h3>
     <ul>
@@ -65,6 +92,109 @@
   <div id="version_1_60_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/atomic/">Atomic</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Enforced proper alignment of <code><span class="identifier">atomic</span><span class="special">&lt;&gt;</span></code> storage. This should fix
+                possible issues on platforms that support atomic operations on data
+                units larger than the native word size. This may also change binary
+                layout of user's data structures that have <code><span class="identifier">atomic</span><span class="special">&lt;&gt;</span></code> members.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed compilation for PowerPC with IBM XL C++ compiler. Corrected
+                memory barriers in PowerPC assembler.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed compilation with MSVC-8 for ARM.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed compilation with gcc 4.4 for x86-64, when 128-bit atomic operations
+                were used. (<a href="https://svn.boost.org/trac/boost/ticket/10994">#10994</a>)
+              </div>
+            </li>
+            <li>
+              <div>
+                Optimized some gcc assembler blocks for x86/x86-64 to reduce the
+                number of used registers. This may require binutils 2.10 or later.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/chrono/">Chrono - 2.0.5</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Fixes:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10778">#10778</a>
+                      VC14 CTP4 Atomic don't compile with boost::chrono durations
+                      which are not TriviallyCopyable
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10840">#10840</a>
+                      Missing std:: qualifier for puts call in test_7868.cpp
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10851">#10851</a>
+                      Missing std:: qualifier for puts call in time_point_output.cpp
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10893">#10893</a>
+                      Minor doc typo in Boost.Chrono
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10992">#10992</a>
+                      Chrono IO state savers inconsistent with Boost.IO state savers
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/10995">#10995</a>
+                      duration_put::put_value truncates fractional part
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/11006">#11006</a>
+                      Impossible to instantiate time_fmt_io_saver due to several
+                      errors.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/11012">#11012</a>
+                      chrono_io v2 fail to compile with boost::chrono::duration&lt;
+                      boost::rational&lt;int&gt; &gt;
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
       <li>
         <div>
           <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
@@ -84,11 +214,108 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/core/">Core</a>:</span>
+          <ul>
+            <li>
+              <div>
+                In symbol demangling tools, added support for gabi++ ABI implementation
+                used in Android NDK.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added a new <code><span class="identifier">enable_if_has_type</span></code>
+                tool for performing SFINAE checks for presence of a nested type.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/master/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
                 Maintenance fixes.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
+          <ul>
+            <li>
+              <div>
+                General changes:
+                <ul>
+                  <li>
+                    <div>
+                      On Windows, the configuration macro <code><span class="identifier">BOOST_LOG_USE_WINNT6_API</span></code>
+                      is no longer used by the library. The target Windows version
+                      should be configured by defining macro <code><span class="identifier">BOOST_USE_WINAPI_VERSION</span></code>.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                Bug fixes:
+                <ul>
+                  <li>
+                    <div>
+                      Fixed compilation for Android using Google NDK. (<a href="https://svn.boost.org/trac/boost/ticket/11559">#11559</a>)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fixed compilation of some logging statements, where the first
+                      object to be put into stream is not directly supported by
+                      <code><span class="identifier">formatting_ostream</span></code>.
+                      (<a href="https://svn.boost.org/trac/boost/ticket/11549">#11549</a>)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added a workaround for Solaris Studio 12.4, which should fix
+                      the compilation of <code><span class="identifier">formatting_ostream</span></code>.
+                      (<a href="https://svn.boost.org/trac/boost/ticket/11545">#11545</a>)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fixed compilation when native <code><span class="keyword">wchar_t</span></code>
+                      type is disabled. (<a href="https://svn.boost.org/trac/boost/ticket/11541">#11541</a>)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fixed exporting symbols from the <code><span class="identifier">boost_log_setup</span></code>
+                      library on POSIX-like systems.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Fixed compilation of character decorators.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Added a workaround for incorrect file name generation in text
+                      file sink backend, when the file name contains date/time placeholders.
+                      (<a href="https://svn.boost.org/trac/boost/ticket/11691">#11691</a>)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                See <a href="/doc/libs/master/libs/log/doc/html/log/changelog.html">changelog</a>
+                for more details.
               </div>
             </li>
           </ul>
@@ -107,6 +334,246 @@
             <li>
               <div>
                 Maintenance fixes.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/thread/">Threrad - 4.6.0</a>:</span>
+  <em>New
+          Experimental Features:</em>
+          <ul>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11231">#11231</a>
+                Allow to set continuation future's destructor behavior to non-blocking
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11424">#11424</a>
+                Provide shared_timed_mutex as an alternative name for shared_mutex
+                and deprecate the use of shared_mutex as a timed mutex
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11734">#11734</a>
+                future::then(Cont) should be able to execute the contination on undetermined
+                thread
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11736">#11736</a>
+                Allow to use launch::executor on future::then(launch::executor, cont)
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11737">#11737</a>
+                Add a launch::inherit policy that can be used on ::then() to use
+                the policy of the parent future <em>Fixed Bugs:</em>
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/3926">#3926</a>
+                thread_specific_ptr + dlopen library causes a SIGSEGV.
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/6377">#6377</a>
+                Condition variable blocks when changing time
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/6787">#6787</a>
+                boost::thread::sleep() hangs if system time is rolled back
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/7665">#7665</a>
+                this_thread::sleep_for no longer uses steady_clock in thread
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/7720">#7720</a>
+                exception lock_error while intensive locking/unlocking of mutex
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/9309">#9309</a>
+                test_latch fails often on clang-darwin-tot11
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/10788">#10788</a>
+                GetLogicalProcessor isn't available for Windows platform less or
+                equals to 0x0502
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11090">#11090</a>
+                ex_future_unwrap- ThreadSanitizer: lock-order-inversion (potential
+                deadlock)
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11158">#11158</a>
+                Pthread thread deadlock when faketime used
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11174">#11174</a>
+                boost::condition_variable::timed_wait with predicate unexpectedly
+                wakes up while should wait infinite
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11185">#11185</a>
+                Incorrect URL redirection
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11192">#11192</a>
+                boost::future&lt;&gt;::then() with an executor doesn't compile when
+                the callback returns a future
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11250">#11250</a>
+                future made from make_exceptional fails on assertion in destructor
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11256">#11256</a>
+                future&lt;&gt;::is_ready() == false in continuation function
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11261">#11261</a>
+                bad use of scoped threads in basic_thread_pool
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11262">#11262</a>
+                bad use of direct pointer in shared_state_nullary_task
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11263">#11263</a>
+                lock already locked lock
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11266">#11266</a>
+                boost::packaged_task has invalid variadic signature
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11302">#11302</a>
+                boost thread doesn't build with BOOST_THREAD_PATCH.
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11322">#11322</a>
+                sleep_for() nanoseconds overload will always return too early on
+                windows
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11329">#11329</a>
+                using declarative for GetProcessHeap, .... fails
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11368">#11368</a>
+                boost thread's usage of CreateWaitableTimer wakes PC from sleep (doh)
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11377">#11377</a>
+                Boost condition variable always waits for system clock deadline
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11435">#11435</a>
+                gcc compiler warning in future.hpp
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11555">#11555</a>
+                devector.hpp assumes allocator_traits_type is always present
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11562">#11562</a>
+                Timer (using steady_clock) expires after computer time is set forward
+                on Ubuntu 64-bit
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11672">#11672</a>
+                Thread: Should use unique_ptr, not auto_ptr
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11688">#11688</a>
+                thread::try_join_until: Avoid busy wait if system clock changes
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="http://svn.boost.org/trac/boost/ticket/11672">#11716</a>
+                ::then(f) should inherit the parent Executor
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/uuid/">UUID</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added a workaround for MSVC codegen bug that could cause crashes
+                when comparing UUIDs.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added detection of AVX being enabled with MSVC compiler switches.
               </div>
             </li>
           </ul>
