--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -84,7 +84,9 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/doc/libs/master/libs/vmd/">VMD</a>:</span>
+  Variadic Macro Data library,
+          from Edward Diener.
         </div>
       </li>
     </ul>
