--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -259,7 +259,7 @@
                 <ul>
                   <li>
                     <div>
-                      *Special notice for <code><span class="identifier">fusion</span><span class="special">::</span><span class="identifier">vector</span></code>*
+                      <strong>Special notice for <code><span class="identifier">fusion</span><span class="special">::</span><span class="identifier">vector</span></code></strong>
                       <ul>
                         <li>
                           <div>
