Fix brackets in ticket link.
I'm assuming they were a typo.

PR #117.

--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -400,9 +400,9 @@
                 <ul>
                   <li>
                     <div>
-                      <a href="https://svn.boost.org/trac/boost/ticket/11699">(
-                      Trac #11699 ( (<em>&quot;Forward declarations of std
-                      templates causes stack corruption under Visual Studio 2015&quot;</em>)</a>.
+                      <a href="https://svn.boost.org/trac/boost/ticket/11699">Trac
+                      #11699 (<em>&quot;Forward declarations of std templates
+                      causes stack corruption under Visual Studio 2015&quot;</em>)</a>.
                     </div>
                   </li>
                 </ul>
