QVM Review Scheduled.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -89,7 +89,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Adam Wulkiewicz</td>
 
-                    <td>-</td>
+                    <td>December 7, 2015 - December 16, 2015</td>
                   </tr>
 
                   <tr>
